@@ -5,10 +5,16 @@ First off, read Linus' CodingStyle in the kernel Documentation/ directory.
 Most of it applies directly. There are a number of other points worth making,
 however.
 
+The script "check_style.py" in the oprofile-tests CVS module can help
+identify some problems. Note that it generates a lot of false positives,
+as well as false negatives, so be careful in its use. If all else fails,
+use common sense.
+
 General points
 --------------
 
-Keep lines within 80 columns with a maximum tab size of 8.
+Keep lines within 80 columns with a maximum tab size of 8. You may
+exceed 80 columns if the alternative is uglier (see format_output.h).
 
 Keep files (especially headers) focussed on one small aspect.
 Make judicious use of forward declarations.
@@ -28,6 +34,16 @@ Use Doxygen comments judiciously. Actual source code should generally
 only document the unexpected. Comments should not duplicate what the code
 says (this means variable/function naming is uber-important). The Doxygen
 function comments go in the header (except for static functions obviously).
+
+Do not use trailing comments, unless they are used for an enum or struct
+member, e.g. :
+
+	enum foo {
+		bar, /**< foo */
+		baz, /**< quux */
+	};
+
+If you do this, you must use the above doxygenated markup.
 
 Makefile.am: prefer using
 LIST = \
